--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@
 /build.properties
 /META-INF
 
+# QtCreator IDE project files
+*.config
+*.files
+*.includes
+*.creator
+
 paparazzi.sublime-workspace
 
 # JetBrains (PyCharm, etc) IDE project files
