[sdlogger] adding error status

--- a/Helisa.config
+++ b/Helisa.config
@@ -6,18 +6,15 @@
 #define AHRS_TYPE_H "subsystems/ahrs/ahrs_int_cmpl_quat_wrapper.h"
 #define ASPIRIN_2_SPI_DEV spi1
 #define ASPIRIN_2_SPI_SLAVE_IDX SPI_SLAVE0
-#define BB_MS5611_SLAVE_IDX SPI_SLAVE1
-#define BB_MS5611_SPI_DEV spi1
 #define BOARD_CONFIG "boards/lisa_s_1.0.h"
 #define DATALINK PPRZ
 #define DOWNLINK 1
 #define DOWNLINK_DEVICE uart1
 #define DOWNLINK_TRANSPORT pprz_tp
-#define GIT_DESC v5.5_devel-586-gc4f9416-dirty
-#define GIT_SHA1 c4f941644d2152bf6d500fe4453ce9b18d606d2f
-#define GPS_LINK uart3
-#define GPS_TYPE_H "subsystems/gps/gps_ubx.h"
-#define GPS_UBX_UCENTER 1
+#define GIT_DESC v5.7_devel-362-g4deedba-dirty
+#define GIT_SHA1 4deedba97d724f2b03417cb6fe3b6785652fea86
+#define GPS_DATALINK 1
+#define GPS_TYPE_H "subsystems/gps/gps_datalink.h"
 #define IMU_TYPE_H "imu/imu_aspirin_2_spi.h"
 #define INS_TYPE_H "subsystems/ins/ins_int.h"
 #define LISA_S 1
@@ -28,12 +25,13 @@
 #define PPRZ_UART uart1
 #define PPRZ_VER 
 #define PPRZ_VER_MAJOR 5
-#define PPRZ_VER_MINOR 5
+#define PPRZ_VER_MINOR 7
 #define PPRZ_VER_PATCH 0
 #define RADIO_CONTROL 1
 #define RADIO_CONTROL_LED 3
 #define RADIO_CONTROL_TYPE_H "subsystems/radio_control/ppm.h"
 #define RADIO_CONTROL_TYPE_PPM 1
+#define RADIO_KILL_SWITCH RADIO_FLAP
 #define SD_LOGGER_SPI_LINK_DEVICE spi2
 #define SD_LOGGER_SPI_LINK_SLAVE_NUMBER SPI_SLAVE3
 #define SERVO_HZ 300
@@ -44,14 +42,13 @@
 #define SYS_TIME_LED 1
 #define TIM5_SERVO_HZ 2000
 #define UART1_BAUD B115200
-#define UART3_BAUD B38400
 #define USE_ADC 1
 #define USE_AHRS 1
 #define USE_AHRS_ALIGNER 1
+#define USE_BARO_BOARD FALSE
 #define USE_GPS 1
 #define USE_IMU 1
 #define USE_LED 1
-#define USE_MAGNETOMETER 1
 #define USE_NAVIGATION 1
 #define USE_PERSISTENT_SETTINGS TRUE
 #define USE_SERVOS_1AND2 1
@@ -62,4 +59,3 @@
 #define USE_SPI_SLAVE1 1
 #define USE_SPI_SLAVE3 1
 #define USE_UART1 1
-#define USE_UART3 1
