Did identification experiment with logger

--- a/Helisa.config
+++ b/Helisa.config
@@ -11,10 +11,8 @@
 #define DOWNLINK 1
 #define DOWNLINK_DEVICE uart1
 #define DOWNLINK_TRANSPORT pprz_tp
-#define GIT_DESC v5.7_devel-367-g3aa04bd-dirty
-#define GIT_SHA1 3aa04bd6c74becf2401b9b58d57d37a2e982ed02
-#define GPS_DATALINK 1
-#define GPS_TYPE_H "subsystems/gps/gps_datalink.h"
+#define GIT_DESC v5.7_devel-368-g9de88ec-dirty
+#define GIT_SHA1 9de88ecc3be0b173096c04353d9f7401696d9595
 #define IMU_TYPE_H "imu/imu_aspirin_2_spi.h"
 #define INS_TYPE_H "subsystems/ins/ins_int.h"
 #define LISA_S 1
@@ -46,9 +44,9 @@
 #define USE_AHRS 1
 #define USE_AHRS_ALIGNER 1
 #define USE_BARO_BOARD FALSE
-#define USE_GPS 1
 #define USE_IMU 1
 #define USE_LED 1
+#define USE_MAGNETOMETER 1
 #define USE_NAVIGATION 1
 #define USE_PERSISTENT_SETTINGS TRUE
 #define USE_SERVOS_1AND2 1
