--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,7 @@ paparazzi.sublime-workspace
 /sw/logalizer/openlog2tlm
 /sw/logalizer/ahrs2fg
 /sw/logalizer/disp3d
+/sw/logalizer/sdlogger_download
 
 # /sw/simulator/
 /sw/simulator/gaia
