--- a/Helisa.config
+++ b/Helisa.config
@@ -1,6 +1,7 @@
 #define __thumb2__ 1
 #define STM32F1 1
 #define ACTUATORS 1
+#define ADC_CHANNEL_GENERIC1 ADC_2
 #define AHRS_ALIGNER_LED 2
 #define AHRS_PROPAGATE_FREQUENCY 500
 #define AHRS_TYPE_H "subsystems/ahrs/ahrs_int_cmpl_quat_wrapper.h"
@@ -11,11 +12,12 @@
 #define DOWNLINK 1
 #define DOWNLINK_DEVICE uart1
 #define DOWNLINK_TRANSPORT pprz_tp
-#define GIT_DESC v5.7_devel-368-g9de88ec-dirty
-#define GIT_SHA1 9de88ecc3be0b173096c04353d9f7401696d9595
+#define GIT_DESC v5.7_devel-791-g1bf20a5-dirty
+#define GIT_SHA1 1bf20a58ac7e5cca3e0cda9640e573b16a57b091
 #define IMU_TYPE_H "imu/imu_aspirin_2_spi.h"
 #define INS_TYPE_H "subsystems/ins/ins_int.h"
 #define LISA_S 1
+#define LOGGER_LED 3
 #define PERIODIC_FREQUENCY 512
 #define PERIODIC_TELEMETRY 1
 #define PERIPHERALS_AUTO_INIT 1
@@ -29,11 +31,10 @@
 #define RADIO_CONTROL_LED 3
 #define RADIO_CONTROL_TYPE_H "subsystems/radio_control/ppm.h"
 #define RADIO_CONTROL_TYPE_PPM 1
-#define RADIO_KILL_SWITCH RADIO_FLAP
-#define SD_LOGGER_SPI_LINK_DEVICE spi2
-#define SD_LOGGER_SPI_LINK_SLAVE_NUMBER SPI_SLAVE3
+#define SDLOGGER_CONTROL_SWITCH RADIO_AUX2
+#define SDLOGGER_SPI_LINK_DEVICE spi2
+#define SDLOGGER_SPI_LINK_SLAVE_NUMBER SPI_SLAVE2
 #define SERVO_HZ 300
-#define SPI_MASTER 1
 #define SPI_MASTER 1
 #define STABILIZATION_ATTITUDE_TYPE_H "stabilization/stabilization_attitude_quat_int.h"
 #define STABILIZATION_ATTITUDE_TYPE_INT 1
@@ -41,6 +42,7 @@
 #define TIM5_SERVO_HZ 2000
 #define UART1_BAUD B115200
 #define USE_ADC 1
+#define USE_ADC_2 1
 #define USE_AHRS 1
 #define USE_AHRS_ALIGNER 1
 #define USE_BARO_BOARD FALSE
@@ -55,5 +57,5 @@
 #define USE_SPI2 1
 #define USE_SPI_SLAVE0 1
 #define USE_SPI_SLAVE1 1
-#define USE_SPI_SLAVE3 1
+#define USE_SPI_SLAVE2 1
 #define USE_UART1 1
